--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -4,7 +4,9 @@
 #slides-collection {
     background-color: black;
 }
-
+.slide-content{
+    text-shadow: 0.5px 0.5px 1px #66615b;
+}
 
 /* ===================================================
 // user setttings
@@ -31,6 +33,8 @@
 
 .row .nav-tabs-navigation {
     border-bottom: 1px solid #F1EAE0;
+    margin: 10px -15px 20px -15px;
+    padding: 0 15px;
 }
 
 #user_area_tabs [class^="col-"] {
@@ -70,7 +74,10 @@
     background: #fff;
     border-radius: 0;
     box-shadow: none;
+    border: 1px solid rgba(0,0,0,.125);
 }
+
+
 .main-items-grid .card-columns-custom {
     display: flex;
     justify-content: center;
@@ -79,7 +86,17 @@
 
 .main-items-grid .card.card-full {
     width: 99%;
+    height: 145px;
 }
+.main-items-grid .card.card-full .card-block {
+    padding: 1rem;
+}
+
+.main-items-grid .card.card-full .card-text {
+    padding: 10px;
+    margin: 0;
+}
+
 .main-items-grid .card h4 {
     margin: 0;
 }
@@ -111,6 +128,15 @@
     /*border: 1px solid rgba(0,0,0,.125);*/
     border-bottom: 0;
 }
+
+.main-items-grid .card .card-image a {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+
 .card-blockquote .info {
     height: 153px;
     display: block;
@@ -158,7 +184,7 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 0;
-    border: 1px solid rgba(0,0,0,.125);
+    border-top: 1px solid rgba(0,0,0,.125);
 }
 
 .card.card-primary {
@@ -170,7 +196,6 @@
     border-color: #6bd098;
 }
 .card-inverse .card-text{
-    height: 128px;
     padding-top: 10px;
 }
 
