--- a/views/layouts/front-default.htm
+++ b/views/layouts/front-default.htm
@@ -47,7 +47,7 @@
     </div> -->
 
     <!--    navbar come here          -->
-    <nav class="navbar navbar-toggleable-md fixed-top main_nav" shrink-on-scroll="50" toggle-on-scroll="350">
+    <nav class="navbar navbar-toggleable-md fixed-top main_nav" shrink-on-scroll="50" toggle-on-scroll="300" up-scroll-show-start="1200">
         <div class="main_nav_container">
             <div class="container">
                 <div class="navbar-translate row">
@@ -94,11 +94,11 @@
                             <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="javascript:" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="javascript:" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">
                                 Dropdown link
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <li class="dropdown-header">Dropdown header</li>
+                            <ul class="dropdown-menu dropdown-menu-right " aria-labelledby="navbarDropdownMenuLink">
+                                <li class="dropdown-header dropdown-container">Dropdown header</li>
                                 <li class="dropdown-item"><a href="#paper-kit">Action</a></li>
                                 <li class="dropdown-item"><a href="#paper-kit">Another action</a></li>
                                 <li class="dropdown-item"><a href="#paper-kit">Something else here</a></li>
@@ -132,7 +132,7 @@
                                     <!-- <i class="hs_svg_icon icon_single-01" aria-hidden="true"></i> -->
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li class="dropdown-header">Hello, <?= e($this->user->email) ?></li>
+                                    <li class="dropdown-header dropdown-container">Hello, <?= e($this->user->email) ?></li>
                                     <?php foreach ($mySettings as $category => $items): ?>
                                         <?php foreach ($items as $item): ?>
                                             <li class="dropdown-item">
@@ -153,7 +153,7 @@
                             </li>
                         <?php else: ?>
                             <li class="nav-item">
-                                <a class="nav-link" data-control="popup" data-handler="ajaxResponder::onLoginPopup<-Login" href="<?= Url::to('login/index') ?>">
+                                <a data-attach-loading="1" class="nav-link" data-control="popup" data-handler="ajaxResponder::onLoginPopup<-Login" href="<?= Url::to('login/index') ?>">
                                     <?= e(trans('backend::lang.account.login')) ?>
                                 </a>
                             </li>
@@ -208,7 +208,7 @@
                 </nav>
                 <div class="credits ml-auto">
                     <span class="copyright">
-                        © <script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script>document.write(new Date().getFullYear())</script>2017, made with <i class="fa fa-heart heart"></i> by Creative Tim
+                        © 2017, made with <i class="fa fa-heart heart"></i> HS
                     </span>
                 </div>
             </div>
@@ -221,7 +221,7 @@
 <script src="<?= URL::asset('assets/static/js/jquery-3.2.1.js') ?>" type="text/javascript"></script>
 <script src="<?= URL::asset('assets/static/js/jquery-ui-1.12.1.custom.min.js') ?>" type="text/javascript"></script>
 <script src="<?= URL::asset('assets/static/js/tether.min.js') ?>" type="text/javascript"></script>
-<script src="<?= URL::asset('assets/static/js/bootstrap.min.js') ?>" type="text/javascript"></script>
+
 
 <!-- ajax framework files -->
 <?php
