--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ html {
   min-height: 100%;
 }
 body {
-  padding-bottom: calc(86px + 25px);
+  padding-bottom: calc(86px + 25px + 49px);
   /*height: 6000px;*/
 }
 .footer {
@@ -25,10 +25,35 @@ body {
 .fade.in {
     opacity: 1;
 }
+
+.no-padding-both {
+    padding: 0 !important;
+}
+
+.no-padding-tb {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+
 .no-padding {
     padding-right: 0 !important;
     padding-left: 0 !important;
 }
+
+.no-margin-both {
+    margin: 0 !important;
+}
+
+.no-margin-lr {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.no-margin {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
 
 /* ===================================================
 // header proxy
@@ -369,4 +394,42 @@ body {
     transform: translate3d(0px, 0px, 0px);
     visibility: visible !important;
     opacity: 1;
+}
+
+
+
+/* ===================================================
+// Animations
+// ===================================================*/
+.click-big {
+    animation: clicking 550ms ease;
+}
+
+@keyframes clicking {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(1.1);
+    opacity: 0.8;
+  }
+  30% {
+    transform: scale(1.4);
+    opacity: 0.3;
+  }
+  40% {
+    transform: scale(2.2);
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  81% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
